# algori

./: Cargo.toml  README.md  README.org  README.zh.md
.gitea/: PULL_REQUEST_TEMPLATE.md
.github/: issue-checker.yml  pull_request_template.md
.github/workflows/: hugo.yml  release.yaml  rust_check.yml
doc/: _index.md  hugo.yaml
doc/math/: _index.md
doc/searching/: _index.md
doc/sorting/: README.md  _index.md  sorting.md
doc/structure/: README.md  _index.md
src/: lib.rs  main.rs  tools.rs  utils.rs
src/logicgate/: logicgate.rs  mod.rs
src/math/: DFT.rs  complex.rs  dft.rs  gcd.rs  laplace.rs  mod.rs  pi.rs
src/matrix/: matrix.rs  mod.rs  square.rs
src/search/: binary.rs  linearity.rs  max.rs  min.rs  min_and_max.rs  mod.rs  sum.rs
src/searching/: binary_search.rs  mod.rs  two_sum.rs
src/sort/: .#heap.rs  binary.rs  bubble.rs  count.rs  heap.rs  insertion.rs  merge.rs  mod.rs  pattern.rs  quicksort.rs  radix.rs  selection.rs
src/sorting/: bubble_sort.rs  insertion_sort.rs  merge_sort.rs  mod.rs  selection_sort.rs  utils.rs
src/string/: max_substring.rs  mod.rs
src/structure/: binarytree.rs  complex.rs  heap.rs  linkedlist.rs  logicgate.rs  mod.rs  pointer.rs  priority_queue.rs  stack.rs
src/subarray/: merge_max.rs  mod.rs  rude.rs  substring.rs
