[package]
name = "algori"
version = "0.11.11"
edition = "2021"
authors = ["Donjuan Platinum <donjuan@lecturify.net>"]
license = "GPL-2.0-only"
description = "Rust Algorithms"
repository = "https://github.com/donjuanplatinum/Algori"
readme = "README.md"
documentation = "https://docs.rs/algori"
keywords = ["matrix","math","algorithm","sort","search"]
categories = ["algorithms"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
