[package]
name = "algori"
version = "0.13.5"
edition = "2021"
authors = ["Donjuan Platinum <donjuan@lecturify.net>"]
license = "GPL-2.0-only"
description = "Rust Algorithms"
repository = "https://github.com/donjuanplatinum/Algori"
readme = "README.org"
documentation = "https://docs.rs/algori"
keywords = ["matrix","math","algorithm","sort","search"]
categories = ["algorithms"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9.0" , optional = true}
image = { version = "0.25.5", optional = true}
[features]
default = ["std","random","img"]
std = []
no_std = []
random = ["std","rand"]
img = ["std","image"]
